--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 
+# Authority chain dependencies
+sha2 = "0.10"
+
 # RSB framework with re-exported dependencies (optional for now)
 # rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }
 # xstream = { git = "https://github.com/oodx/xstream", branch = "main" }
