🔗 Complete Authority-Age Integration Bridge (Story 2.4 - 3 pts)
Implement the critical force multiplier connecting authority chain system
with proven Age automation and Lucas's atomic authority operations.

## Story 2.4: Integration Bridge ✅ (3 pts)

### AuthorityAgeInterface - Core Integration
- Authority-aware Age encryption/decryption operations
- Operation authorization with authority level validation
- Seamless integration with existing CrudManager (proven automation)
- Comprehensive audit logging for all authority operations

### LucasAuthorityBridge - Atomic Operations
- Direct integration with Lucas's authority_manager.sh
- Atomic authority validation using proven bash patterns
- Emergency recovery procedures via emergency_recovery.sh
- Health check validation ensuring script availability

### AuthorityAgeFactory - Simplified Access
- Factory pattern for creating integrated components
- Default configurations following production patterns
- Clean separation of concerns with proven error handling

## Force Multiplier Impact
- **Proven Foundation**: Builds on Edgar's TTY automation (production ready)
- **Mathematical Security**: Uses Lucas's atomic authority validation
- **Immediate Value**: Authority-controlled file operations working now
- **Context Efficient**: 3 points delivering maximum functionality

## Architecture Highlights
- Authority validation before every operation
- Passphrase derivation for different key types (ignition vs direct)
- Environment variable support for ignition key passphrases
- Comprehensive error handling with audit trails

## Integration Success
- Compiles cleanly with existing Age automation
- Preserves all security validation from pilots
- Ready foundation for key generation operations (Story 2.1)
- Enables immediate authority-controlled encryption/decryption

**Progress: 15/45 story points complete (Milestone 1: 12pts + Story 2.4: 3pts)**

Next: Key Generation Operations building on this proven integration foundation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "1.0"
 
 # Authority chain dependencies
 sha2 = "0.10"
+hex = "0.4"
 
 # RSB framework with re-exported dependencies (optional for now)
 # rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }
