🎯 CLI Restructuring: Direct Module System Interfaces
IMPLEMENTATION COMPLETE: Two independent CLI tools for direct testing
- cli_age: Direct interface to Age automation module system
- cli_auth: Direct interface to X->M->R->I->D authority chain system

Architecture Changes:
- Moved src/driver.rs → src/bin/cli_age.rs (Age automation CLI)
- Created src/bin/cli_auth.rs (Authority chain CLI)
- Updated Cargo.toml with new binary targets
- Both CLIs build and run independently

Purpose: Direct user interfaces for testing and debugging module systems
- NOT for padlock orchestration (uses libraries directly)
- Enables independent testing of each module system
- Provides debugging interfaces for users

Functional Validation:
- cli_age: Complete Age automation lifecycle (Lock/Unlock/Verify/Status)
- cli_auth: X->M->R->I->D authority operations (Generate/Encrypt/Ignition/Validate)
- Real authority chain generation proven working (generates 5 keys successfully)
- Both tools provide comprehensive help and subcommand interfaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ name = "padlock"
 path = "src/main.rs"
 
 [[bin]]
-name = "driver"
-path = "src/driver.rs"
+name = "cli_age"
+path = "src/bin/cli_age.rs"
+
+[[bin]]
+name = "cli_auth"
+path = "src/bin/cli_auth.rs"
 
 
 [dependencies]
