--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "padlock"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 
 [[bin]]
@@ -15,8 +15,14 @@ path = "src/bin/cli_age.rs"
 name = "cli_auth"
 path = "src/bin/cli_auth.rs"
 
+[[bin]]
+name = "driver"
+path = "driver.rs"
+
 
 [dependencies]
+portable-pty = "0.9"
+
 # Core dependencies for Age automation
 tempfile = "3.8"
 chrono = { version = "0.4", features = ["serde"] }
@@ -24,12 +30,12 @@ clap = { version = "4.4", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "1.0"
+thiserror = "2"
 
 # Authority chain dependencies
 sha2 = "0.10"
 hex = "0.4"
-rand = "0.8"
+rand = "0.9"
 
 # RSB framework with re-exported dependencies (optional for now)
 # rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }
